# multi-claude

./: .gitignore  Makefile  README.md  install.sh  multi-claude-demo.webm  pyproject.toml  tmux.conf
multi_claude/: __init__.py  __main__.py  config.py  gitinfo.py  manager.py  overhead.py  registry.py  status.py  statusline.py  tmux.py  transcripts.py  ui.py
skills/condense-to-skill/: SKILL.md
skills/handoff/: SKILL.md
tests/: fake_claude.py  smoke.sh  test_complete.py  test_gitinfo.py  test_manager.py  test_registry.py  test_status.py  test_statusline.py  test_tmux.py  test_transcripts.py  test_ui_text.py
