[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-claude"
version = "0.2.0"
description = "Terminal dashboard for managing multiple Claude Code instances (tmux-backed)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []  # stdlib only, by design

[project.scripts]
multi-claude = "multi_claude.__main__:main"

[tool.setuptools]
packages = ["multi_claude"]
